@startuml

title __CONDITIONALTEXTUALOPERATOR's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace textualOperators {
        namespace conditionalTextualOperator {
          abstract class gr.ds.unipi.noda.api.redisearch.filterOperators.textualOperators.conditionalTextualOperator.ConditionalTextualOperator {
              - isNotEqual : boolean
              + getOperatorExpression()
              + getPostOperatorExpression()
              {abstract} # getOperatorField()
              {abstract} # getPostOperatorField()
              ~ ConditionalTextualOperator()
          }
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace textualOperators {
        namespace conditionalTextualOperator {
          class gr.ds.unipi.noda.api.redisearch.filterOperators.textualOperators.conditionalTextualOperator.OperatorAllKeywords {
              {static} + newOperatorAllKeywords()
              # getOperatorField()
              # getPostOperatorField()
              - OperatorAllKeywords()
          }
        }
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace filterOperators {
      namespace textualOperators {
        namespace conditionalTextualOperator {
          class gr.ds.unipi.noda.api.redisearch.filterOperators.textualOperators.conditionalTextualOperator.OperatorAnyKeywords {
              {static} + newOperatorAnyKeywords()
              # getOperatorField()
              # getPostOperatorField()
              - OperatorAnyKeywords()
          }
        }
      }
    }
  }
  

  gr.ds.unipi.noda.api.redisearch.filterOperators.textualOperators.conditionalTextualOperator.ConditionalTextualOperator .up.|> gr.ds.unipi.noda.api.redisearch.filterOperators.RediSearchPostFilterOperator
  gr.ds.unipi.noda.api.redisearch.filterOperators.textualOperators.conditionalTextualOperator.ConditionalTextualOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.textualOperators.conditionalTextualOperators.ConditionalTextualOperator
  gr.ds.unipi.noda.api.redisearch.filterOperators.textualOperators.conditionalTextualOperator.OperatorAllKeywords -up-|> gr.ds.unipi.noda.api.redisearch.filterOperators.textualOperators.conditionalTextualOperator.ConditionalTextualOperator
  gr.ds.unipi.noda.api.redisearch.filterOperators.textualOperators.conditionalTextualOperator.OperatorAnyKeywords -up-|> gr.ds.unipi.noda.api.redisearch.filterOperators.textualOperators.conditionalTextualOperator.ConditionalTextualOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
